--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,10 @@
 
   <meta name="description" content="Gerenciado de projetos">
 
-	<link rel='icon' type='image/png' href='/favicon.png'>
-	<link rel='stylesheet' href='/bundle.css'>
+  <link rel='icon' type='image/png' href='/favicon.png'>
+
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,500&display=swap" rel="stylesheet">
+  <link rel='stylesheet' href='/bundle.css'>
 
 	<script defer src='/bundle.js'></script>
 </head>
